# docreader-cloud

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README.ru.md
src/: main.rs
src/app/: book_manager.rs  input_handler.rs  mod.rs  progress_manager.rs  render_manager.rs  render_thread.rs  settings_dialog.rs
src/config/: constants.rs  settings.rs
src/pdf/: cache.rs  mod.rs  renderer.rs
src/renderer/: cache.rs  djvu.rs  epub.rs  fb2.rs  format.rs  mod.rs  pdf.rs  text_render.rs  traits.rs
src/sync/: merge.rs  mod.rs  storage.rs  watcher.rs
src/ui/: document_viewer.rs  mod.rs  pdf_viewer.rs  sidebar.rs  toolbar.rs
