[package]
name = "docreader-cloud"
version = "1.1.0"
edition = "2021"

[dependencies]
# GUI
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }

# PDF Rendering
pdfium-render = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# File watching
notify = "7.0"

# EPUB
rbook = "0.4"

# FB2
quick-xml = "0.37"

# Text rendering (for EPUB/FB2)
ab_glyph = "0.2"
imageproc = "0.25"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
sha2 = "0.10"
lru = "0.12"
directories = "5.0"
uuid = { version = "1.0", features = ["v4"] }
image = "0.25"
once_cell = "1.19"
